add backend endlines and connect to frontend, add some sass styles

--- a/src/app/item_list/item-list.component.sass
+++ b/src/app/item_list/item-list.component.sass
@@ -1,2 +1,33 @@
-img 
-    width: 25px
+
+#list-component
+    width: 100vw
+    height: 100vh
+    display: flex
+    flex-direction: column
+    align-items: center
+
+    a
+        color: white
+        text-decoration: none
+
+    button
+        border-radius: 5px
+        width: 50px
+        height: 35px
+        background-color: rgb(101, 184, 53)
+        border: none
+
+    img
+        width: 25px
+
+    th
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+        text-align: start
+        width: 100px
+
+    #list
+        background-color: rgb(220, 255, 199)
+        flex-direction: column
+        display: flex
+        border: 1px solid black
+        border-radius: 5px
