--- a/src/app/item_list/item-list.component.html
+++ b/src/app/item_list/item-list.component.html
@@ -1,25 +1,30 @@
-<h1> Item List </h1>
-<input type='text' [(ngModel)]='filter'>
-<table>
-    <thead>
-        <th>pic</th>
-        <th>name</th>
-        <th>price</th>
-        <th>date</th>
-        <th>rating</th>
-    </thead>
-    <tbody>
-        <tr *ngFor='let item of filteredItems'>
-            <td>
-                <img [src]='item.image' style="width: 25px;">
-            </td>
-            <td> {{ item.name }} </td>
-            <td> {{ item.price }} </td>
-            <td> {{ item.date | replace: '/' : '-' }} </td>
-            <td>
-                <app-stars [rating]='item.rating'></app-stars>
-            </td>
-            <a [routerLink]="['/items/info', item.id]">Info</a>
-        </tr>
-    </tbody>
-</table>
+<div id="list-component">
+    <div id="list">
+        <input type='text' [(ngModel)]='filter' id="search-bar">
+        <table>
+            <thead>
+                <th>PIC</th>
+                <th>NAME</th>
+                <th>PRICE</th>
+                <th>DATE</th>
+                <th>RATING</th>
+            </thead>
+            <tbody>
+                <tr *ngFor='let item of filteredItems'>
+                    <td>
+                        <img [src]='item.image' style="width: 25px;">
+                    </td>
+                    <td> {{ item.name }} </td>
+                    <td> {{ item.price }} </td>
+                    <td> {{ item.date | replace: '/' : '-' }} </td>
+                    <td>
+                        <app-stars [rating]='item.rating'></app-stars>
+                    </td>
+                    <button>
+                        <a [routerLink]="['/items/info', item.id]">EDIT</a>
+                    </button>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
