--- a/src/app/item_list/item.info.component.html
+++ b/src/app/item_list/item.info.component.html
@@ -1,6 +1,6 @@
-<h2>item Id = {{ item.id }}</h2>
+<h2>item Id</h2>
 
-<form #itemForm="ngForm">
+<form #itemForm="ngForm" *ngIf="item">
     <div>
         <label for="item name">Name: </label>
         <input 
