--- a/src/app/item_list/item.info.component.sass
+++ b/src/app/item_list/item.info.component.sass
@@ -1,7 +1,11 @@
-.invalid 
-    border: 1px solid red
-    outline: none
+form
+    .invalid
+        border: 1px solid red
+        outline: none
 
-label
-    display: inline-block
-    width: 50px
+    label
+        display: inline-block
+        width: 50px
+
+    #rating
+        width: 25px
