--- a/src/app/item_list/item-list.component.sass
+++ b/src/app/item_list/item-list.component.sass
@@ -12,10 +12,17 @@
 
     button
         border-radius: 5px
-        width: 50px
+        width: 65px
         height: 35px
-        background-color: rgb(101, 184, 53)
         border: none
+
+    .edit-btn
+        margin-right: 4px
+        background-color: rgb(0, 98, 245)
+
+    .delete-btn
+        color: white
+        background-color: #ff3232
 
     img
         width: 25px
@@ -26,7 +33,6 @@
         width: 100px
 
     #list
-        background-color: rgb(220, 255, 199)
         flex-direction: column
         display: flex
         border: 1px solid black
